# echosphere

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  DEVELOPMENT.md  LICENSE  README.md  build.sh  phases.md  prd.md  setup_macos.sh
Resources/: placeholder.txt
Source/: DelayLine.cpp  DelayLine.h  JuceHeader.h  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
